tests/snapshots/run_wpt_conformance__onnx_sqrt_float16_4D_tensor.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "sqrt.https.any.js",
    "sqrt float16 4D tensor",
    "onnx",
    "PASS",
)
